--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "theme_color": "#000000",
     "icons": [
       {
-        "src": "/static/icons/icon-192x192.png",
+        "src": "/static/icon-192x192.png",
         "sizes": "192x192",
         "type": "image/png"
       },
