--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
         "type": "image/png"
       },
       {
-        "src": "/static/icons/icon-512x512.png",
+        "src": "/static/icon-512x512.png",
         "sizes": "512x512",
         "type": "image/png"
       }
